# insurance_market

./: .pre-commit-config.yaml  .windsurfrules  README.md  justfile
.github/workflows/: backend-checks.yml
backend/: README.md  pyproject.toml
backend/src/marketplace/: __init__.py  admin.py  api.py  apps.py  consumers.py  routing.py  signals.py
backend/src/marketplace/migrations/: 0001_initial.py
backend/src/marketplace/models/: bid.py  quote.py
backend/src/marketplace/tests/: conftest.py  test_bid.py  test_quote.py
backend/src/project/: asgi.py  settings.py  urls.py  wsgi.py
backend/stubs/channels/: __init__.pyi  layers.pyi  routing.pyi
backend/stubs/channels/generic/: __init__.pyi  websocket.pyi
backend/test/martketplace/models/: conftest.py  test_bid.py  test_quote.py
frontend/: README.md
frontend/app/quotes/: layout.tsx
frontend/app/quotes/new/: page.tsx
