[project]
name = "insurance-market"
version = "0.1.0"
description = "An insurance marketplace with automated bidding. (Just playing around)"
readme = "README.md"
authors = [{ name = "Joshua Szepietowski", email = "joshSzep@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "django-ninja>=1.3.0",
    "django-stubs>=5.1.3",
    "django>=5.1.6",
    "python-dotenv>=1.0.1",
    "channels>=4.0.0",
    "daphne>=4.1.0",
]

[project.scripts]
insurance-market = "insurance_market:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketplace", "src/project"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "pre-commit>=4.1.0",
    "pyright>=1.1.393",
]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = ["RUF012", "RUF006"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["insurance_market"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = false

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
reportUnusedImport = true
reportUnusedVariable = true
stubPath = "stubs"
extraPaths = ["src"]
typeCheckingMode = "basic"
venvPath = ".venv"
venvName = ".venv"
ignore = ["**/channels/**"]

[tool.django-stubs]
django_settings_module = "project.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
